--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <!--Menu-->
+  <section class="container">
     <menu class="m-3">
         <ul class="nav justify-content-end">
         <li class="nav-item">
@@ -37,7 +38,7 @@
         </li>
       </ul>
     </menu>
-
+  </section>  
   <!--Cuerpo-->
     <main class="mt-5">
       <div class="container d-flex flex-row cuerpo">
@@ -58,7 +59,8 @@
     </main>
 
   <!--Despliegues-->
-    <nav class="w-auto shadow p-3 mb-5 bg-body-tertiary rounded">
+  <section class="container">
+    <nav class="text w-auto shadow p-3 mb-5 bg-body-tertiary rounded">
         <div class="container mt-5 ml-0">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
@@ -149,7 +151,7 @@
             </div>
           </div>
     </nav>
-  
+  </section>
   <!--Formulario-->
     <footer>
       <form class="bg-primary p-5">
